comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum perspiciatis, velit autem vitae quas mollitia eveniet provident repudiandae quidem alias est consequatur. Aliquam provident voluptatum ex iusto vel. Quasi, aut?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sapiente quod asperiores, dignissimos qui incidunt veritatis rem assumenda ratione quae architecto deserunt. Laboriosam assumenda voluptates voluptatibus ea, eaque iste quis?</p>
         </article>
     </main>
     
